--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="main">
         <div class="header">
             <div class="navbar">
-                <div class="logo">
+                <div class="logo"><a href="/index.html">
                     <img src="https://www.servis.pk/cdn/shop/files/new-servis-0122.png?v=1709385446&width=375" alt=""
-                        width="250px">
+                        width="250px"></a>
                     <span>
                         <ul>
-                            <li><a href="">MENS</a></li>
+                            <li><a href="/mens.html">MENS</a></li>
                             <li><a href="#">WOMENS</a></li>
                             <li><a href="#">KIDS</a></li>
                             <li><a href="#">SALE</a></li>
