--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="header">
             <div class="navbar">
                 <div class="logo"><a href="/index.html">
-                    <img src="https://www.servis.pk/cdn/shop/files/new-servis-0122.png?v=1709385446&width=375" alt=""
-                        width="250px"></a>
+                        <img src="https://www.servis.pk/cdn/shop/files/new-servis-0122.png?v=1709385446&width=375"
+                            alt="" width="250px"></a>
                     <span>
                         <ul>
                             <li><a href="/mens.html">MENS</a></li>
