--- a/mens.html
+++ b/mens.html
@@ -18,7 +18,7 @@
                             alt="" width="250px"></a>
                     <span>
                         <ul>
-                            <li><a href="">MENS</a></li>
+                            <li><a href="/mens.html">MENS</a></li>
                             <li><a href="#">WOMENS</a></li>
                             <li><a href="#">KIDS</a></li>
                             <li><a href="#">SALE</a></li>
