--- a/mens.html
+++ b/mens.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENS</title>
-    <link rel="stylesheet" href="/mens.cssx">
+    <link rel="stylesheet" href="./mens.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -13,12 +13,12 @@
     <div class="main">
         <div class="header">
             <div class="navbar">
-                <div class="logo"><a href="/index.html">
+                <div class="logo"><a href="./index.html">
                         <img src="https://www.servis.pk/cdn/shop/files/new-servis-0122.png?v=1709385446&width=375"
                             alt="" width="250px"></a>
                     <span>
                         <ul>
-                            <li><a href="/mens.html">MENS</a></li>
+                            <li><a href="./mens.html">MENS</a></li>
                             <li><a href="#">WOMENS</a></li>
                             <li><a href="#">KIDS</a></li>
                             <li><a href="#">SALE</a></li>
